src/main.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

* {
  font-family: inherit;
}

#root {
  text-align: center;
}

figure, blockquote, dl, dd, p {
  margin: 0;
  padding: 0;
}

ul, ol {
  list-style: none;
  padding: 0;
  margin: 0;
}

*, *::before, *::after {
  box-sizing: border-box;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

button {
  all: unset;
  cursor: pointer;
  outline: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  padding: 0;
  font-family: "Roboto", serif;
}

button, a {
  user-select: none;
}

:focus {
  outline:none;
}

html {
  font-size: 16px;
}

a {
  text-decoration: none;
  color: inherit;
}

